fix documents alignment

--- a/css/documents.css
+++ b/css/documents.css
@@ -60,13 +60,19 @@
 }
 
 .documents{
-    margin-bottom: 80px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 30%;
 }
 
-.link1, .link2{
+.link2 {
+    margin-left: 8%;
+}
+
+.link1,
+.link2{
     float: right;
-    width: 25%;
-    margin-left: 2%;
+    width: 46%;
 }
 
 .link1 img, .link2 img {
